--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyWeatherApp"
+        android:forceDarkAllowed="false"
         tools:targetApi="31">
 
         <meta-data
