--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,11 +47,11 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".AlarmReceiver"
+        <receiver android:name=".notifications.AlarmReceiver"
             android:exported="true">
 
         </receiver>
-        <receiver android:name=".RemoveNotificationReceiver" />
+        <receiver android:name=".notifications.RemoveNotificationReceiver" />
     </application>
 
 </manifest>
